29-07-2013 4.2.9
- support for z-push without storing passwords
- Disconnect button for Dropbox
- Z-push 2 fixes for LG phones
- Z-push admin shows more info
- Fixed Notice:  Undefined index: sort in /usr/share/groupoffice/modules/tickets/controller/TicketController.php on line 54
- custom header valdiation for sieve rules
- Try to use z-push password when e-mail password is not stored in db
- Smaller contact pictures so it won't break sync
- Fixed caldav problem when accepting an invitation by mail before it was synced to TB.

25-07-2013 4.2.8
- Added BIC number to company fields of the addressbook module
- The paste-from-word button in the wisywig editor is translated and Dutch and German translation was added
- IE 10 Comma problem

19-07-2013 4.2.7
- Fixed euro character encoding problem in emails
- When changing th FK of the relation the contains the ACL field (eg contanct <--> addressbook) the old permission level will be checked as well
- Delete keyboard shortcut disabled in tasks grid if deleting is not allowed for one of the selected tasklists
- Hide contact photos folder from file manager
- Some attachments missing 1 byte.
- 123 error when moving folders in e-mail
- Customfield blocks: will still work after changing the containing contact's/company's name.
- Address Book: More debugging possibilities when sending mails using the Newsletter feature.
- Some recurring event exceptions couldn't be accepted through e-mail

08-07-2013 4.2.6
- Replace {autoid} tag on apply in project dialog
- Disabled the delete key in the tickets dialog if the user has no manage permission on the module.
- Fixed display of contact photo in email when quicklink is disabled
- Users can only add bookmark categories when they have write permission on the bookmark module.
- Users can only add views when they have write permission on the calendar module.
- Added percentage complete for tasks in calendar