@@ -1,3 +1,6 @@
+- Check if base64 encoded strings can be divided by 4 if decoded line by line to 
+  avoid corrupted mails.
+
 29-07-2013 4.2.9
 - support for z-push without storing passwords
 - Disconnect button for Dropbox
